# Net_and_Id_Discovery

./: .gitignore  01.01.Document_Control_Standard.md  01.02.Project_Initiation_Document.md  01.03.Project_Management_Plan.md  01.04.Functional_Requirements_Document.md  01.05.Technical_Requirements_Document.md  01.06.Architectural_Design_Document.md  01.07.Protocol_Interaction_Standard.md  01.08.Domain_Isolation_Layer_Responsibility_Standard.md  01.Document_Control_Standard.md  01.Project_Initiation_Document.md  0102.ThreatHuntNotes.Template.md  02.01.Implementation_Plan.md  02.02.Test_Design_Document.md  02.03.Test_Plan_Document.md  02.Project_Management_Plan.md  03.01.Test_Results_Summary.md  03.02.Identity_Discovery_Domain_Specification.md  03.02.Network_Discovery_Domain_Specification.md  03.03.Host_Config_Discovery_Domain_Specification.md  03.03.Identity_Discovery_Domain_Specification.md  03.04.Application_Service_Discovery_Domain_Specification.md  03.04.Host_Config_Discovery_Domain_Specification.md  03.05.Application_Service_Discovery_Domain_Specification.md  03.05.Telemetry_Logging_Discovery_Domain_Specification.md  03.06.Telemetry_Logging_Discovery_Domain_Specification.md  03.07.Correlation_Domain_Specification.md  03.08.Enterprise_Hardening_and_Packaging_Specification.md  03.09.M9_Install_Workflow_Decision_Record.md  03.Functional_Requirements_Document.md  04.Technical_Requirements_Document.md  05.Architectural_Design_Document.md  06.Implementation_Plan.md  07.Test_Design_Document.md  08.Test_Plan_Document.md  09.Test_Results_Summary.md  Core_Framework.py  (+24 more)
(+2 files in other folders)
